# soilco

./: README.md  main.py  pyproject.toml  supabase_client.py
src/: main.py
src/backend/: analysis_service.py  auth_service.py  database_service.py  forum_service.py  supabase_client.py  weather_service.py
