[project]
name = "myflet"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet[all]>=0.81.0",
]

[dependency-groups]
dev = [
    "flet-cli>=0.81.0",
    "flet-desktop>=0.81.0",
    "flet-web>=0.81.0",
]

[tool.flet]
org = "com.mycompany"
product = "myflet"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"
